# ChangeLog for dev-perl/Switch
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Switch/ChangeLog,v 1.6 2014/10/18 14:09:42 ago Exp $

  18 Oct 2014; Agostino Sarubbo <ago@gentoo.org> Switch-2.160.0-r1.ebuild:
  Stable for sparc, wrt bug #524154

  18 Oct 2014; Agostino Sarubbo <ago@gentoo.org> Switch-2.160.0-r1.ebuild:
  Stable for ia64, wrt bug #524154

  17 Oct 2014; Agostino Sarubbo <ago@gentoo.org> Switch-2.160.0-r1.ebuild:
  Stable for ppc64, wrt bug #524154

  05 Oct 2014; Agostino Sarubbo <ago@gentoo.org> Switch-2.160.0-r1.ebuild:
  Stable for alpha, wrt bug #524154

  30 Sep 2014; Jeroen Roovers <jer@gentoo.org> Switch-2.160.0-r1.ebuild:
  Stable for HPPA (bug #524154).

  25 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +Switch-2.160.0-r1.ebuild, +metadata.xml:
  Move to dev-perl

  04 Jul 2014; Tobias Klausmann <klausman@gentoo.org> Switch-2.160.0-r1.ebuild:
  Keyworded on alpha, bug #489676

*Switch-2.160.0-r1 (01 Jul 2014)

  01 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +Switch-2.160.0-r1.ebuild, -Switch-2.160.0.ebuild:
  Revision bump for EAPI=5; mark stable on amd64, ppc, x86 based on testing by
  zlogene, bug 511874

  03 Feb 2014; Akinori Hattori <hattya@gentoo.org> Switch-2.160.0.ebuild:
  keyword ~ia64 wrt bug #489676

  30 Dec 2013; Naohiro Aota <naota@gentoo.org> Switch-2.160.0.ebuild:
  Add ~x86-fbsd.

  28 Oct 2013; Jeroen Roovers <jer@gentoo.org> Switch-2.160.0.ebuild:
  Marked ~hppa (bug #489676).

  29 Oct 2012; Anthony G. Basile <blueness@gentoo.org> Switch-2.160.0.ebuild:
  keyword ~ppc, bug #439158

  18 Jul 2012; Michael Weber <xmw@gentoo.org> Switch-2.160.0.ebuild:
  Marking ~arm for www-client/netsurf

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  01 Mar 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Add cpan remote-id tags in metadata.xml (#406287)

*Switch-2.160.0 (19 Jun 2011)
