@@ -3,23 +3,17 @@ Hash: SHA256
 
 DIST Switch-2.16-rt60380.patch 577 SHA256 7a60421267c6ab17463dda884fe46b3a2ccdc3e65d864bcb06f5577fddb63e76 SHA512 a67fcf396744bc268c31df543da32c7ee0a78455ce3c430b84bcc1c3feea0ee1cc934a52f67d701a60358dac297c3182a09478b65daf3b898715141da1a57713 WHIRLPOOL fad351d9321f4e04387a858c087b84f8541595ec239518642b6f44422f9f997b8d9e716c89876c7c095b8bff90008cc8e8989e74d837df380f8adf6c12cd88f1
 DIST Switch-2.16.tar.gz 13185 SHA256 308c8f27f295906778186f14c6291923905730b46ba879c3a68fff81c37df9d8 SHA512 614916c3b813c5cc279e592778d24b4213218acbb94fb842b99969475d356f44f451d0ad7fd18b28899a38bdb070e491d32e22c7ee87bc45668606b9cb413f88 WHIRLPOOL dcbdf7f8abde45a8ca39519cf5878c7d3d481653aa3efa239828ca55fe7584816f4c0f479577bd18007327dbacf6cad84efde1a3a0f28644a3514e08b1f608eb
-EBUILD Switch-2.160.0-r1.ebuild 578 SHA256 4a462c5df31179054e81d407547d6c8a9cd58af8ee8a47fdc86f03fcdb8500b2 SHA512 a821793ada37795bdc12c09a70e92052770449918911e53cf37dd45acdffaaadf119ebf80f2a3ca934dac7a29ad2a654005c744d682bb7abd3ccea3508692ae3 WHIRLPOOL 585f86bd8b0a366dedc67550edebc38a060b840e3be75e38fa0f937951238f287a1f7af0ece28d6d26eb7149189494c7d4c3a275b011878309e09020533727ae
-MISC ChangeLog 2096 SHA256 bef69786a40f3f92d1c6443c5bffb5acd4802df16ac0d28c2f9c0c83cfbe022d SHA512 dd291937d33aa11bf788cb24396adb560eb057eea0414e96a7dc39790c84481cc4dbfc20d9717c3ce67fdff53456de17b57d7aa0f4c03af1dd6390760bfcee32 WHIRLPOOL 261ca55ff2f11f1159f895c0b0c85f578bb268e7a772bb57960484b5a00a4bac23048220385f329cf18ce92bf727ddb6a8fadeb4490b07d1824cb65f18d987df
+EBUILD Switch-2.160.0-r1.ebuild 594 SHA256 7edbd4e2305b00681d6d020c41e32bf8629867b93eb8dcc4d9932d76d0733fa0 SHA512 be255a16db811282dad7f665c6f6afa36f9c6fc9a73c130168dbdeca03d5a8bcf18cbe9e146efdf95af39f7356e7c4ec0b8bc4508a3634f563e46fe9c16af233 WHIRLPOOL d394248bd0617e0aad824d3ae3598af8530488100d65e6cc42ee854340c47ceeb1cd9ed9d567625145e8b169f20ceb7a9bada2bc6257f63c111bb1e7cc9dd1d6
+MISC ChangeLog 2216 SHA256 fcfd6a54d4b2314c37252ed454f48d2d7cfbec8d31ea734f3ba8632a9febb6e2 SHA512 a55f25b97b87abf8439a2e54aa3def82dc0f0ffe1e8c560f2ff0d0bc54b4eb51c8dacfd08654f84c0c8e8e987214a8e604c9edc15eff57dcaffe82ac14d4a65c WHIRLPOOL 3eb403b342a6bf7e3c75302f516e16b6966fd54b34c9c88be4a404a034f7d7f955e3cd0c924b0d2d3bac3610a8c760f6a00e6ef0fc32010eeb162724b6f013c7
 MISC metadata.xml 278 SHA256 5a76d11ba6aab0133fee5cf164aaaafc372e148ce1c4c552ac323b94248d6d48 SHA512 af34b8d6273129ebcf1a035e12ae41ac4a5e3b045cd9f9102f49e5b5c05263af480be07e900d564ff4253264aff6a538358aff4252d2ea19e006d7ee102db15b WHIRLPOOL 4cc7fa9cd1b136cffd7cd98f3ebea0a5e094678fd967e63a366e361ef9b71b3095bd6b76da48e9167c32f199d4bee2d9ad52001da1713e1008f3a66a6f467f90
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUQnSnAAoJELp701BxlEWfuZoP/1rgXCK/b8cwMYTKxCpze0JZ
-//bfYfaQ4QLnoYcnx1cF+7ky7L/I1yl1++FnPDsuOLokDgkTar3KggBMYbdQDkFM
-A7gaueNaFGi6uxxW6H2QLFDCTW6deGvtpOUvvmoimMGG01u0VsKr871wAVvqN4JK
-7wTcI1zG0ZqQ2jO2+qhoP6ZD+knlkse9XNWiXPRFB9fj4toF0JuLw520azXYppPA
-qd8OhEt54k57wyy6Ee8yaS0eQG9WtdBO2QLUy1v8yFvYBEV9A1CTsDo4K7y+r3e3
-aRoo+l1D6sx+12W04RI1iAni3l/+4MQcv24R9UcVGQmfpAWYWnCswx1MpkaWEFJw
-0rjuKOCXe5B9ooEoJECEPmHYD9YXBSlodOTyby0mLsONDtQlYKLme0n1pGuyYPOD
-KzADC5NlZsslJDFzzv6sBnkT+BmkBaMGOBSBF8QYD+zClKmze4XB6s9NI+YfPtMP
-N6dLNRhj+YUP3yvRRPb7dag40uJlF88B4TRwGhM8RM/UGgZ5z5A/vKWz0Ss6DxOP
-Vqkf4l6UMeDmMlDwB8lFawDucemGCBg5oluh0ClrXqbykshpHNSSljjkWeBJ/IY/
-W8TDC1O392E3invioKZaNIFznrTxQxJ+IbkU8/VxiVAMKnKrfMIVMhx5f0Tuphmk
-+VWQufBk24gA2bflr7H7
-=kk2E
+iQEcBAEBCAAGBQJU3M2zAAoJEOeBhlrCAAWGjGEH/jI2VB0rxGRHiRmpDMqoEhUQ
+2XiMWWqKR8e7nNO5Q87CrGKfyo+np3v7qSBU9qnYn697z6qufiK51nz24wwRlPTB
+yicX4Y94r0TPWzjlgwduFhW4S90HHe8dIlyIlbfuODyYs82lzYmxkC94ye2/xLx3
+L1pFOcqwef9Ox4y0GLxHO4+Rwrfhp5TdQregYYzs10NGimTkwBD+WoxyhkwljiXU
+Cb0cZFCNHZ7/BwdM8Rz+PxiVio+cn2Xov3GjzmgpG5Gvcgxwm8fRwi3iZWgomufD
+FsZjiUIRfJtLcIgN3x95pb1Zq+Ok9j0wRnMUJksJ7zf8SkVq3UQ99YKAh1P16NM=
+=XjLs
 -----END PGP SIGNATURE-----
