@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Switch/Switch-2.160.0-r1.ebuild,v 1.6 2014/10/18 14:09:42 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Switch/Switch-2.160.0-r1.ebuild,v 1.7 2015/02/12 15:58:35 ottxor Exp $
 
 EAPI=5
 
@@ -12,7 +12,7 @@ DESCRIPTION="A switch statement for Perl"
 SRC_URI+=" http://dev.gentoo.org/~tove/distfiles/perl-core/Switch/Switch-2.16-rt60380.patch"
 
 SLOT="0"
-KEYWORDS="alpha amd64 ~arm hppa ia64 ppc ppc64 sparc x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 ~arm hppa ia64 ppc ppc64 sparc x86 ~x86-fbsd ~amd64-linux"
 IUSE=""
 
 SRC_TEST="do"
