@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Switch
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Switch/ChangeLog,v 1.6 2014/10/18 14:09:42 ago Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Switch/ChangeLog,v 1.7 2015/02/12 15:58:35 ottxor Exp $
+
+  12 Feb 2015; Christoph Junghans <ottxor@gentoo.org> Switch-2.160.0-r1.ebuild:
+  added ~amd64-linux (tested by me)
 
   18 Oct 2014; Agostino Sarubbo <ago@gentoo.org> Switch-2.160.0-r1.ebuild:
   Stable for sparc, wrt bug #524154
